--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "i18next": "^25.3.2",
+    "i18next-http-backend": "^3.0.2",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
