--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "i18next": "^23.11.5",
     "i18next-http-backend": "^2.5.2",
     "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-i18next": "^14.1.1"
   },
   "devDependencies": {
@@ -24,5 +24,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "typescript": "^5"
+  },
+  "overrides": {
+    "react": "18.3.1"
   }
 }
